--- a/about.html
+++ b/about.html
@@ -77,22 +77,22 @@
     <section id="contact-section">
         <h1>Expert advice, just a click away!</h1>
         <p>Fill this short form and one of our executives will call you shortly.</p>
-        <form action="#" class="contact-form">
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe_C3lYKu413viMU20SEBmbBhDxfRsXhSdxmssWeulWpcOY0g/formResponse" class="contact-form" method="post" target="hidden_iframe" onsubmit="showAlert()">
             <div class="form-column">
                 <label for="name"><h3>Name</h3></label>
-                <input type="text" name="name" id="name" placeholder="eg: Tony Stark">
+                <input type="text" name="entry.858360133" id="name" placeholder="eg: Tony Stark">
             </div>
             <div class="form-column">
                 <label for="email"><h3>Email</h3></label>
-                <input type="email" name="email" id="email" placeholder="eg: youremail@gmail.com">
+                <input type="email" name="entry.1143132323" id="email" placeholder="eg: youremail@gmail.com">
             </div>
             <div class="form-column">
                 <label for="phone"><h3>Phone</h3></label>
-                <input type="tel" name="phone" id="phone" placeholder="eg: 9311763530">
+                <input type="tel" name="entry.2371021" id="phone" placeholder="eg: 9311763530">
             </div>
             <div class="form-column">
                 <label for="country"><h3>Country</h3></label>
-                <input type="text" name="country" id="country" placeholder="eg: India">
+                <input type="text" name="entry.813592062" id="country" placeholder="eg: India">
             </div>
             <div class="form-btns">
                 <button type="submit" class="form-btn submitbtn"><svg id="send-alt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M3.69,8.75,19.61,3.06a1,1,0,0,1,1.33,1.33L15.25,20.31a1,1,0,0,1-1.95,0l-2.51-6.52a1,1,0,0,0-.6-.6L3.67,10.7A1,1,0,0,1,3.69,8.75Zm6.93,4.63,3-3" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg><h3>Send!</h3></button>
