--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                 </div>
                 <br>
                 <p class="footer-desc"><strong>Cloud Magician Pvt. Ltd.</strong><br>
-                    Srikanthapur, Balasore,<br>Odisha-756001</p>
+                    Srikanthapur, Balasore,<br>Odisha-756001<br>India</p>
             </div>
             <div class="footer-column">
                 <div class="footer-heading"><h3>Company</h3><h4 class="down-arrow">&#x276E;</h4></div>
