--- a/about.html
+++ b/about.html
@@ -134,7 +134,11 @@
                 </div>
                 <br>
                 <p class="footer-desc"><strong>Cloud Magician Pvt. Ltd.</strong><br>
-                    Srikanthapur, Balasore,<br>Odisha-756001<br>India</p>
+                    Srikanthapur, Balasore,<br>Odisha-756001<br>India
+                    <br>
+                    <br>
+                    Email : <a href="mailto: contact@cloudmagician.in" class="footer-link">contact@cloudmagician.in</a>
+                </p>
             </div>
             <div class="footer-column">
                 <div class="footer-heading"><h3>Company</h3><h4 class="down-arrow">&#x276E;</h4></div>
