--- a/index.html
+++ b/index.html
@@ -216,12 +216,16 @@
                 </div>
                 <br>
                 <p class="footer-desc"><strong>Cloud Magician Pvt. Ltd.</strong><br>
-                    Srikanthapur, Balasore,<br>Odisha-756001<br>India</p>
+                    Srikanthapur, Balasore,<br>Odisha-756001<br>India
+                    <br>
+                    <br>
+                    Email : <a href="mailto: contact@cloudmagician.in" class="footer-link">contact@cloudmagician.in</a>
+                </p>
             </div>
             <div class="footer-column">
                 <div class="footer-heading"><h3>Company</h3><h4 class="down-arrow">&#x276E;</h4></div>
                 <a href="about.html" class="footer-link">About Us</a>
-                <a href="#" class="footer-link" onclick="openForm()">Contact</a>
+                <a class="footer-link" onclick="openForm()">Contact</a>
             </div>
             <div class="footer-column">
                 <div class="footer-heading"><h3>Services</h3><h4 class="down-arrow">&#x276E;</h4></div>
