--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Industry leading cloud services at your fingertips.">
+    <meta name="description" content="Industry leading cloud services at your fingertips. Cloud Magician provides DevOps and SecOps services at affordable costs without compromising with the security">
+    <meta name="keywords" content="cloud magician, cloud, magician, services, cloud services, azure, aws, microsoft azure, microsoft, devops, devop, secop, secops, gcp, google cloud platform, gcp, google, platform">
     <meta name="theme-color" content="#6464FF">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -31,7 +32,7 @@
 <body>
     <header id="navbar">
         <nav>
-            <a href="index.html" class="branding"><svg id="cloud-check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="48" height="48"><path id="cloud" d="M20.83,13A3,3,0,0,1,18,17H6a3,3,0,1,1,2-5.2A5,5,0,0,1,13,7a4.94,4.94,0,0,1,2,.42" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><polyline id="primary-2" data-name="primary" points="13 11 15 13 20 8" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline></svg> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1>&nbsp; &nbsp;<p class="poweredby">powered by TCS</p></a>
+            <a href="index.html" class="branding"><img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo"> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1>&nbsp; &nbsp;<p class="poweredby">powered by TCS</p></a>
             <div class="menu">
                 <a href="index.html" class="menu-links">Home</a>
                 <a href="services.html" class="menu-links" onmouseover="showservices()">Services</a>
@@ -128,7 +129,7 @@
         <div class="footer-row">
             <div class="footer-column branding-column">
                 <div class="footer-branding">
-                    <svg id="cloud-check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="48" height="48"><path id="primary" d="M20.83,13A3,3,0,0,1,18,17H6a3,3,0,1,1,2-5.2A5,5,0,0,1,13,7a4.94,4.94,0,0,1,2,.42" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><polyline id="primary-2" data-name="primary" points="13 11 15 13 20 8" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline></svg>
+                    <img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo">
                     <h2 class="brand-name">Cloud Magician</h2>
                     <p class="poweredby">powered by TCS</p>
                 </div>
