--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="menu">
                 <a href="#" class="menu-links">Home</a>
                 <a href="services.html" class="menu-links" onmouseover="showservices()">Services</a>
+                <a href="#process" class="menu-links">How It Works</a>
                 <a href="about.html" class="menu-links">About Us</a>
             </div>
             <svg id="menu-alt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="36" height="36"><path id="primary" d="M3,18H21M3,12H21M3,6H21" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
@@ -47,7 +48,7 @@
                 <h1>DevOps and SecOps<br>Services At<br>Your Fingertips</h1>
                 <p>We are the team that's supporting technological infrastructure of companies like Samsung & Cisco.</p>
             </div>
-            <div class="hero-container--right">
+            <div class="hero-container--right" id="contactform">
                 <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe_C3lYKu413viMU20SEBmbBhDxfRsXhSdxmssWeulWpcOY0g/formResponse" class="hero-form" method="post" target="hidden_iframe" onsubmit="showHomeAlert()">
                     <div class="form-column">
                         <label for="name"><h3>Name</h3></label>
@@ -88,15 +89,15 @@
                 <div class="experience-card">
                     <img src="assets/img/experience.png" alt="4+ Years of Experience">
                     <br>
-                    <p><strong>3+ years</strong> in accelerating business.</p>
+                    <p><strong>4+ years</strong> in accelerating business.</p>
                 </div>
                 <div class="experience-card">
-                    <img src="assets/img/team.png" alt="180+ Consultants">
+                    <img src="assets/img/team.png" alt="15+ Consultants">
                     <br>
                     <p><strong>15+ Full Stack</strong> DevOps consultants.</p>
                 </div>
                 <div class="experience-card">
-                    <img src="assets/img/project.png" alt="120+ projects">
+                    <img src="assets/img/project.png" alt="35+ projects">
                     <br>
                     <p><strong>35+ successful</strong> implementations.</p>
                 </div>
@@ -145,6 +146,26 @@
         </div>
     </section>
     <br><br>
+    <section class="process-section" id="process">
+        <div class="white-title"><h1>Focus On Doing Business<br>Leave The Rest To Us</h1></div>
+        <div class="process-container">
+            <div class="process-card">
+                <div class="process-count"><h1>1</h1></div>
+                <h2 class="process-title">Talk To An Expert</h2>
+                <p class="process-content">Contact us through <a href="https://wa.me/919311763530/" target="_blank">WhatsApp</a> for quick response or fill out our <a href="#contactform">contact form</a> and one of our executive will contact you shortly!</p>
+            </div>
+            <div class="process-card">
+                <div class="process-count"><h1>2</h1></div>
+                <h2 class="process-title">Get An Experienced Team</h2>
+                <p class="process-content">Our team will have a discussion with you about all the aspects and requirements of your technological infrastructure.</p>
+            </div>
+            <div class="process-card">
+                <div class="process-count"><h1>3</h1></div>
+                <h2 class="process-title">All Set, Lets Rock!</h2>
+                <p class="process-content">Once everything is discussed, we will start working on every aspect to keep your business up and running.</p>
+            </div>
+        </div>
+    </section>
     <section class="clients">
         <div class="section-title"><h1 style="background: #FFF !important;">Our Top Clients</h1></div>
         <div class="clients-wrapper">
