--- a/services.html
+++ b/services.html
@@ -37,6 +37,7 @@
             <div class="menu">
                 <a href="index.html" class="menu-links">Home</a>
                 <a href="#" class="menu-links" onmouseover="showservices()">Services</a>
+                <a href="index.html#process" class="menu-links">How It Works</a>
                 <a href="about.html" class="menu-links">About Us</a>
             </div>
             <svg id="menu-alt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="36" height="36"><path id="primary" d="M3,18H21M3,12H21M3,6H21" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
