--- a/index.html
+++ b/index.html
@@ -150,12 +150,18 @@
         <div class="white-title"><h1>Focus On Doing Business<br>Leave The Rest To Us</h1></div>
         <div class="process-container">
             <div class="process-card">
-                <div class="process-count"><h1>1</h1></div>
+                <div class="process-count">
+                    <h1>1</h1>
+                    <img src="assets/img/process-arrow.png" class="process-arrow">
+                </div>
                 <h2 class="process-title">Talk To An Expert</h2>
-                <p class="process-content">Contact us through <a href="https://wa.me/919311763530/" target="_blank">WhatsApp</a> for quick response or fill out our <a href="#contactform">contact form</a> and one of our executive will contact you shortly!</p>
+                <p class="process-content">Contact us through <a href="https://wa.me/919311763530/" target="_blank">WhatsApp</a> for quick response; fill out our <a href="#contactform">contact form</a> or <a href="mailto: contact@cloudmagician.in">email</a> us your requirements and one of our executive will contact you shortly!</p>
             </div>
             <div class="process-card">
-                <div class="process-count"><h1>2</h1></div>
+                <div class="process-count">
+                    <h1>2</h1>
+                    <img src="assets/img/process-arrow.png" class="process-arrow">
+                </div>
                 <h2 class="process-title">Get An Experienced Team</h2>
                 <p class="process-content">Our team will have a discussion with you about all the aspects and requirements of your technological infrastructure.</p>
             </div>
