--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="experience-card">
                     <img src="assets/img/team.png" alt="15+ Consultants">
                     <br>
-                    <p><strong>15+ Full Stack</strong> DevOps consultants.</p>
+                    <p><strong>20+ Happy</strong> customers.</p>
                 </div>
                 <div class="experience-card">
                     <img src="assets/img/project.png" alt="35+ projects">
