--- a/services.html
+++ b/services.html
@@ -293,6 +293,7 @@
             </div>
         </div>
     </footer>
+    <div class="dzn-branding" style="position: relative; padding: .5rem 1rem; width: 100%; height: auto; display: grid; place-content: center; background-color: blanchedalmond;"><a href="https://dezynation.com" style="position: relative; text-decoration: none; text-align: center; color: darkslategray;">Designed & developed by DezyNation</a></div>
 
 
     <script src="assets/js/navbar.js"></script>
