--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <section class="hero" id="hero">
         <div class="hero-container">
             <div class="hero-container--left">
-                <h1>DevOps and SecOps<br>Services At<br>Your Fingertips</h1>
-                <p>We are the team that's supporting technological infrastructure of companies like Samsung & Cisco.</p>
+                <h1>IT Infrastructure Management Services & DevOps Services Company</h1>
             </div>
             <div class="hero-container--right" id="contactform">
                 <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe_C3lYKu413viMU20SEBmbBhDxfRsXhSdxmssWeulWpcOY0g/formResponse" class="hero-form" id="heroform" method="post" target="hidden_iframe" onsubmit="showHomeAlert()">
