--- a/services.html
+++ b/services.html
@@ -133,8 +133,13 @@
 
     
     <div class="other-services">
-        <div class="section-heading"><h1>Our Other Services</h1></div>
+        <div class="section-heading"><h1>IT Infrastructure Management</h1></div>
         <br><br>
+        <div class="other-services-card" onclick="openForm()" data-aos="fade-down" data-aos-offset="120" data-aos-duration="1000">
+            <h3 class="other-services--title">We do the hard work to manage your infrastructure, so you can focus more on growing your business.</h3>
+            <br>
+            <p class="other-services--desc">Industry standard advisories for small to large enterprises to expand and manage their technological infrastructure.</p>
+        </div>
         <div class="other-services-card" onclick="openForm()" data-aos="fade-down" data-aos-offset="120" data-aos-duration="1000">
             <h3 class="other-services--title">Experts in Solution Architect</h3>
             <br>
