--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             </div>
             <div class="footer-column">
                 <div class="footer-heading"><h3>Important</h3><h4 class="down-arrow">&#x276E;</h4></div>
-                <a href="privacypolicy.html" class="footer-link">Terms & Conditions</a>
-                <a href="privacypolicy.html" class="footer-link">Privacy Policy</a>
+                <a href="privacy-policy.html" class="footer-link">Terms & Conditions</a>
+                <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
             </div>
         </div>
         <br>
