--- a/about.html
+++ b/about.html
@@ -32,17 +32,20 @@
 <body>
     <header id="navbar">
         <nav>
-            <a href="index.html" class="branding"><img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo"> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1>&nbsp; &nbsp;<p class="poweredby">powered by TCS</p></a>
+            <a href="index.html" class="branding"><img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo"> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1></a>
             <div class="menu">
                 <a href="index.html" class="menu-links">Home</a>
                 <a href="services.html" class="menu-links" onmouseover="showservices()">Services</a>
                 <a href="index.html#process" class="menu-links">How It Works</a>
                 <a href="#" class="menu-links">About Us</a>
+                <p class="nav-consult" onclick="openForm()"><i class="bi bi-gift-fill"></i>&nbsp; &nbsp;Free Consultation</p>
             </div>
             <svg id="menu-alt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="36" height="36"><path id="primary" d="M3,18H21M3,12H21M3,6H21" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
         </nav>
     </header>
+    <iframe id="hidden_iframe" class="hidden_iframe" name="hidden_iframe" frameborder="0" style="width: 100%; height: 0;"></iframe>
 
+    <br><br><br>
     <div class="about-top-content">
         <h1>The magician of your cloud computing journey!</h1>
     </div>
@@ -123,7 +126,7 @@
         <img src="assets/img/whatsapp.png" alt="Chat with us" class="chatbtn">
     </a>
 
-    <button class="quotation" onclick="openForm()"><svg id="information-chat" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="36" height="36"><line id="primary-upstroke" x1="12.05" y1="8" x2="11.95" y2="8" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></line><path id="primary" d="M12,13v3M10.54,3.11A9,9,0,0,0,4,16.11l-.7,3.41A1,1,0,0,0,4.48,20.7L7.87,20h0A9,9,0,1,0,10.54,3.11Z" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg><h2>Get A Quote</h2></button>
+    <a class="quotation" onclick="openForm()"><i class="bi bi-gift-fill"></i>&nbsp; &nbsp;<h3>Book Free Consultation</h3></a>
 
     <!-- Footer Starts Here -->
     <footer>
@@ -132,7 +135,6 @@
                 <div class="footer-branding">
                     <img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo">
                     <h2 class="brand-name">Cloud Magician</h2>
-                    <p class="poweredby">powered by TCS</p>
                 </div>
                 <br>
                 <p class="footer-desc"><strong>Cloud Magician Pvt. Ltd.</strong><br>
