--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,16 +31,18 @@
 <body>
     <header id="navbar">
         <nav>
-            <a href="#" class="branding"><img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo"> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1>&nbsp; &nbsp;<p class="poweredby">powered by TCS</p></a>
+            <a href="index.html" class="branding"><img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo"> &nbsp;&nbsp;&nbsp;<h1 class="brand-name">Cloud Magician</h1>&nbsp; &nbsp;<p class="poweredby">powered by TCS</p></a>
             <div class="menu">
-                <a href="#" class="menu-links">Home</a>
+                <a href="index.html" class="menu-links">Home</a>
                 <a href="services.html" class="menu-links" onmouseover="showservices()">Services</a>
-                <a href="#process" class="menu-links">How It Works</a>
+                <a href="index.html#process" class="menu-links">How It Works</a>
                 <a href="about.html" class="menu-links">About Us</a>
+                <p class="nav-consult" onclick="openForm()"><i class="bi bi-gift-fill"></i>&nbsp; &nbsp;Free Consultation</p>
             </div>
             <svg id="menu-alt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="36" height="36"><path id="primary" d="M3,18H21M3,12H21M3,6H21" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
         </nav>
     </header>
+    <iframe id="hidden_iframe" class="hidden_iframe" name="hidden_iframe" frameborder="0" style="width: 100%; height: 0;"></iframe>
     <br><br>
     <div class="about-top-content">
        <center><h1>Privacy Policy</h1></center>
@@ -170,7 +172,6 @@
             <div class="footer-branding">
                 <img src="assets/img/logowhite.png" alt="Cloud Magician" class="nav-logo">
                 <h2 class="brand-name">Cloud Magician</h2>
-                <p class="poweredby">powered by TCS</p>
             </div>
             <br>
             <p class="footer-desc"><strong>Cloud Magician Pvt. Ltd.</strong><br>
